--- a/style.css
+++ b/style.css
@@ -65,10 +65,11 @@ h1, h3 {
     padding: 10px;
     gap: 10px;
     grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 80px;
+    overflow-y: scroll;
 }
 
 .template {
-    height: 80px;
     background-color: #fff;
 }
 
